--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,1 +1,7 @@
-<p>search-bar works!</p>
+<div class="search-container">
+    <form action="search-form" #form="ngForm" (ngSubmit)="onSubmit(form)">
+        <span class="logo" routerLink="/">VG</span>
+        <input class="search-input" name="search" ngModel placeholder="Search 500,000+ games">
+        <button class="search-button">Search</button>
+    </form>
+</div>
