adicionado a thumb GTA

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 body{
     font-family: Roboto, "Helvetca Neue", sans-serif;
-    background-color: black;
+    background-color: rgb(37, 34, 34);
     padding-top: 1%;
     height: 100%;
 }
