--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,12 +4,29 @@
         <mat-select panelClass="sort-select" [(ngModel)]="sort">
             <mat-option value="name">Name</mat-option>
             <mat-option value="released">Released</mat-option>
-            <mat-option value="added">added</mat-option>
+            <mat-option value="added">Added</mat-option>
             <mat-option value="created">Created</mat-option>
             <mat-option value="updated">Updated</mat-option>
             <mat-option value="rating">Rating</mat-option>
             <mat-option value="metacritc">Metacritic</mat-option>
-
         </mat-select>
     </mat-form-field>
 </div>
+
+<div class="games">
+    <div class="game">
+        <div class="game-thumb-container">
+        <img src="https://compass-ssl.xbox.com/assets/a0/4f/a04f2744-74d9-4668-8263-e0261fbea869.jpg?n=GTA-V_GLP-Page-Hero-1084_1920x1080.jpg" 
+        alt="thumbnail" class="game-thumbnail">    
+        </div>
+        <div class="game-description">
+            <p class="game-name">Name</p>
+        </div>
+        <div class="game-platforms">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvfdrv-z0ed0MLk-VTV5u9j9WN0uwe80ULeg&usqp=CAU   " 
+            alt="slug" class="game-platform">
+        </div>
+    </div>
+</div>
+
+
