--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,15 +1,105 @@
 .filters{
-    max-width: 1200px;
-    margin: 20px auto;
-    padding-left: 20px;
+  max-width: 1200px;
+  margin: 20px;
+  padding-left: 20px;
 }
 
 ::ng-deep{
-    .mat-form-field-infx{
-        background-color: #3f51b5;
-    }
+  .mat-form-field-infix{
+    height: 35px;
+    margin-left: 20px;
+    margin-top: 60px;
+    background-color: #3f51b5;
+    border-radius: 5px;
+  }
+
+.mat-select-value,
+.mat-select-arrow,
+.mat-form-field-hide-placeholder .mat-select-placeholder,
+.mat-form-field-appearance-legacy .mat-form-field-label{
+    color: #fff !important;
+    opacity: 1;
 }
 
-//.mat-select-value,
-//.mat-select-arrow,
-//.mat-form-field-hide-placeholder .mat-select-placeholder
+.mat-form-field-infix{
+  border-color: #fff !important;
+  border-top: none;
+  padding-left: 5px !important;
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-label{
+  padding-left: 5px;
+}
+
+/*.mat-form-field-appearance-legacy .mat-form-field-underline{
+  background-color: #fff !important;
+  margin-left: 10px;
+  }*/
+}
+
+.games{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: baseline;
+  max-width: 1200px;
+  margin: 20px auto;
+}
+
+.game{
+  width: 280px;
+  margin: 10px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 5px;
+  background-color: #202020;
+  box-shadow: 4px 3px 8px 2px rgb(44, 106, 200);
+  transition-duration: 0.2s;
+  cursor: pointer;
+
+  &:hover{
+    box-shadow: 8px 6px 16px 4px rgb(214, 220, 230);
+    transform: translateY(-10px);
+  }
+
+  &-thumb-container{
+    background-color: black;
+    position: relative;
+    height: 172px;
+    color: #fff;
+    text-align: center;
+  }
+
+  &-thumbnail{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 172px;
+  }
+
+  &-description{
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 157px;
+  }
+
+  &-name{
+    color: #fff;
+    font-weight: 700;
+    font-size: 22px;
+    margin-bottom: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  &-platforms{
+    display: flex;
+  }
+
+  &-platform{
+    width: 20px;
+  }
+}
